Fix hr overflowing container

--- a/theme/baseStyles.css
+++ b/theme/baseStyles.css
@@ -54,7 +54,7 @@ pre, code {
 }
 
 hr {
-    width: var(--single-column-width);
+    width: min(var(--single-column-width), 100%);
     border: 0.5px solid var(--secondary500);
 }
 .my-container {
